--- a/templates/blog.html
+++ b/templates/blog.html
@@ -3,14 +3,29 @@
 {% block heading %}Welcome to Build A Blog{% endblock %}
 
 {% block content %}
-<h2>Latest from the Blog</h2>
+    <h2>Latest from the Blog</h2>
 
-{% for post in posts %}
-    <div class="blog-post">
-        <h2 class="post-title"><a href="blog/{{post.key().id()}}">{{post.title}}</a></h2>
-        <pre class="post-body">{{post.post}}</div>
-    </div>
-{% endfor %}
+    {% for post in posts %}
+        <div class="blog-post">
+            <h2 class="post-title"><a href="blog/{{post.key().id()}}">{{post.title}}</a></h2>
+            <pre class="post-body">{{post.post}}</div>
+        </div>
+    {% endfor %}
 
+    {% if page == 1 %}
+        <div class = "prevnext">
+            <a href="?page={{page+1}}">next&gt;&gt;</a>
+        </div>
+    {% elif page >= lastpage %}
+        <div class = "prevnext">
+            <a href="?page={{page-1}}">&lt;&lt;previous</a>
+            {{numposts}}
+        </div>
+    {% else %}
+        <div class = "prevnext">
+            <a href="?page={{page-1}}">&lt;&lt;previous</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="?page={{page+1}}">next&gt;&gt;</a>
+            {{numposts}}
+        </div>
+    {% endif %}
 
 {% endblock %}
