--- a/templates/single.html
+++ b/templates/single.html
@@ -7,7 +7,7 @@
 
     <div class="blog-post">
         <h2 class="post-title">{{post.title}}</h2>
-        <pre class="post-body">{{post.post}}</div>
+        <div class="post-body"><p>{{post.post}}<p></div>
     </div>
 
     <div class="error">{{error}}</div>
